add cron activate/deactivate endpoint
