# docs/api.yaml
@@ -101,6 +101,42 @@ paths:
           $ref: "#/responses/Unauthorized"
         500:
           $ref: "#/responses/InternalServerError"
+  /cron/:
+    get:
+      summary: Get latest status for cron
+      operationId: getCronStatus
+      tags:
+        - cron
+      responses:
+        200:
+          $ref: "#/responses/CronStatus"
+        400:
+          $ref: "#/responses/BadRequest"
+        401:
+          $ref: "#/responses/Unauthorized"
+        500:
+          $ref: "#/responses/InternalServerError"
+    post:
+      summary: Set periodic job status active or passive
+      operationId: updateCronStatus
+      tags:
+        - cron
+      parameters:
+        - name: request
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/CronStatus"
+      responses:
+        200:
+          $ref: "#/responses/CronStatus"
+        400:
+          $ref: "#/responses/BadRequest"
+        401:
+          $ref: "#/responses/Unauthorized"
+        500:
+          $ref: "#/responses/InternalServerError"
+
 parameters:
   limit:
     name: limit
@@ -159,7 +195,10 @@ responses:
     description: List of messages
     schema:
       $ref: "#/definitions/MessageList"
-
+  CronStatus:
+    description: Cron latest status
+    schema:
+      $ref: "#/definitions/CronStatus"
 
 definitions:
   PaginatedResponse:
@@ -244,3 +283,10 @@ definitions:
             type: array
             items:
               $ref: "#/definitions/Message"
+  CronStatus:
+    type: object
+    required:
+      - active
+    properties:
+      active:
+        type: boolean
